# Estudo_dirigido_04

./: CMakeLists.txt  Makefile  README.md  main.cpp  sistema
headers/: Catalogo.h  Pedido.h  Produto.h
src/: Catalogo.cpp  Pedido.cpp  Produto.cpp
tests/: test.cpp  testError.cpp
